--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -1,3 +1,5 @@
+/* Tables */
+
 table,
 th {
   border: none;
@@ -79,4 +81,49 @@ th {
 
 .td-btn-info {
   background-color: dodgerblue;
+}
+
+/* Forms */
+
+.div-btn {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.div-form {
+  width: 50%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-labels {
+  font-weight: 700;
+  font-size: 16px;
+  margin: 2rem 2rem 2rem 0;
+}
+
+.form-inputs {
+  border-radius: 5px;
+  border: 1px solid black;
+
+  padding: 5px;
+  font-size: 16px;
+
+  box-sizing: border-box;
+  width: 500px;
+}
+
+.form-btn {
+  color: rgb(0, 0, 0);
+  padding: 8px 20px;
+}
+
+.form-btn:hover {
+  background-color: rgb(132, 245, 128);
+  color: rgb(12, 52, 10);
+  border-width: 1px;
 }
